# ndkports

./: .gitignore  Dockerfile  README.md  build.gradle.kts  commands.txt  deploy  docker-compose.yml  fly.toml  gradle.properties  local.properties  local.properties.example  run  settings.gradle.kts
GameNetworkingSockets/: build.gradle.kts
TouchScrollPhysics/: build.gradle.kts
assimp/: build.gradle.kts
boost/: build.gradle.kts
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: ndkports-port-conventions.gradle.kts
buildSrc/src/main/kotlin/com/android/ndkports/: AdHocPortTask.kt  CMakePortTask.kt  GitSourceArgs.kt  NdkPortsPlugin.kt  SourceExtractTask.kt
cpr/: build.gradle.kts
curl/: build.gradle.kts
doomhowl/emoji2png/: build.gradle.kts
doomhowl/emoji2png/src/: CMakeLists.txt  emoji2png.cc
doomhowl/emoji2png/src/cmake/: emoji2pngConfig.cmake.in
doomhowl/emoji2png/src/src/: emoji2png.cc
doomhowl/raygui/: build.gradle.kts
doomhowl/raylib/: build.gradle.kts
freetype/: build.gradle.kts
gamenetworkingsockets/: build.gradle.kts
googletest/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
jsoncpp/: build.gradle.kts
lua/: build.gradle.kts  src.tar
lunasvg/: build.gradle.kts
magic_enum/: build.gradle.kts
ndkports/: README.md  build.gradle.kts  settings.gradle.kts
ndkports/src/main/kotlin/com/android/ndkports/: GitSourceArgs.kt  HeaderOnlyPortTask.kt  NdkPortsPlugin.kt  PortIo.kt  PortTask.kt  PrefabPackageBuilder.kt  SourceExtractTask.kt
openssl/: build.gradle.kts
protobuf/: build.gradle.kts
range-v3/: build.gradle.kts
raylib/: build.gradle.kts
sioclient/: build.gradle.kts
touch-scroll-physics-c/: build.gradle.kts
webp/: build.gradle.kts  src.tar
